--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@docusaurus/core": "2.0.1",
     "@docusaurus/preset-classic": "2.0.1",
     "@mdx-js/react": "^1.6.22",
+    "autoprefixer": "^10.4.8",
     "clsx": "^1.2.1",
+    "postcss": "^8.4.16",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.1",
